[package]
name = "mirror-tea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0"
octocrab = "0.19.0"
tokio = { version = "1", features = ["full"] }
gitea-rs = "1.19.0"